--- a/herams/overview.html
+++ b/herams/overview.html
@@ -52,8 +52,7 @@
   <!-- app -->
   <script src="js/app.js"></script>
   <!-- controllers -->
-  <script src="js/home/directives/homemap.js"></script>
-  <script src="js/home/controllers/home.js"></script>
+  <script src="js/home/controllers/map.js"></script>
   <!-- directives -->
   <script src="js/home/directives/entry-popups.js"></script>
   <!-- services -->
