--- a/herams/index.html
+++ b/herams/index.html
@@ -50,6 +50,9 @@
   <script src="../bower_components/highcharts/modules/exporting.js"></script>
 
   <!-- app -->
+  <script src="config/config.js"></script>
+
+  <!-- app -->
   <script src="js/app.js"></script>
   <!-- controllers -->
   <script src="js/home/directives/homemap.js"></script>
