misc front implements

--- a/herams/index.html
+++ b/herams/index.html
@@ -54,6 +54,7 @@
 
   <!-- app -->
   <script src="js/app.js"></script>
+  <!-- home -->
   <!-- controllers -->
   <script src="js/home/directives/homemap.js"></script>
   <script src="js/home/controllers/home.js"></script>
