Overview first built + misc improvements

--- a/herams/index.html
+++ b/herams/index.html
@@ -54,6 +54,7 @@
 
   <!-- app -->
   <script src="js/app.js"></script>
+
   <!-- home -->
   <!-- controllers -->
   <script src="js/home/directives/homemap.js"></script>
@@ -64,6 +65,10 @@
   <script src="js/common/services/commonSvc.js"></script>
   <script src="js/home/services/MainMapSvc.js"></script>
   <script src="js/home/services/ChartConfigSvc.js"></script>
+
+  <!-- overview -->
+  <!-- controllers -->
+  <script src="js/overview/controllers/overview.js"></script>
 
 <!--
   <script src="components/version/version.js"></script>
