--- a/herams/overview-new.html
+++ b/herams/overview-new.html
@@ -9,8 +9,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/main.css">
+  <link rel="stylesheet" href="../bower_components/fontawesome/css/fontawesome.css" />
   <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="../bower_components/leaflet/dist/leaflet.css" />
+
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css" integrity="sha384-v2Tw72dyUXeU3y4aM2Y0tBJQkGfplr39mxZqlTBDUZAb9BGoC40+rdFCG0m10lXk" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/fontawesome.css" integrity="sha384-q3jl8XQu1OpdLgGFvNRnPdj5VIlCvgsDQTQB6owSOHWlAurxul7f+JpUOVdAiJ5P" crossorigin="anonymous">
 
   <link rel="stylesheet" href="styles/main.css">
   <script src="../bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
@@ -43,15 +47,25 @@
                 <div class="content layout1">
                     <div class="header container-fluid">
                         <div class="row">
-                            <div class="col-6 tools"></div>
-                            <div class="col-6 userlog"></div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="breadcrumbs">Health infrastructure &gt;</div>
-                                <div class="title"><span>Characteristics</span></div>
+                            <div class="col-sm-6 col-lg-8">
+                                <div class="breadcrumbs">&lt; Back</div>
+                                <div class="title"><span>Section title</span></div>
+                            </div>
+                            <div class="col-sm-6 col-lg-4">
+                                <div class="user-profile">
+                                    <div>
+                                        <div class="usrname">Samuel Petragallo</div>
+                                        <div class="email">petragallo@who.int</div>
+                                        <div class="org"><span>who</span></div>
+                                    </div>
+                                    <div>
+                                        <i class="fas fa-user-circle"></i>
+                                        <i class="fas fa-angle-down" id="log"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+
                         <div class="row">
                             <div class="col-12 filters">
                                 <div class="filter-location"><img src="img/filter_where.svg"/>Nigeria</div>
@@ -105,7 +119,7 @@
                         </div>
                         <div class="row spacer"><div class="col-12"></div></div>
                     </div>
-                </div>
+               </div>
             </div>
 
         </div>
