Layout 2 CSS ok

--- a/herams/overview.html
+++ b/herams/overview.html
@@ -74,7 +74,8 @@
                             </div>
                         </div>
                     </div>
-                    <layout14 mapdata="::heramdata" ng-cloak></layout14>
+                    <!--<layout14 mapdata="::heramdata" ng-cloak></layout14>-->
+                    <layout13 mapdata="::heramdata" ng-cloak></layout13>
                </div>
             </div>
 
@@ -136,6 +137,7 @@
   <script src="js/home/controllers/home.js"></script>
   <script src="js/overview/directives/hfmap.js"></script>
   <script src="js/overview/directives/layouts/layout_1_4.js"></script>
+  <script src="js/overview/directives/layouts/layout_1_3.js"></script>
   <script src="js/overview/controllers/MainCtrl.js"></script>
   <!-- directives -->
   <script src="js/home/directives/entry-popups.js"></script>
