--- a/herams/js/overview/directives/hf-map.html
+++ b/herams/js/overview/directives/hf-map.html
@@ -1,3 +1,16 @@
 <div class="map-container">
+    <div class="map-filters">
+        <div class="regfiltr">
+            <div class="filter-name">Filter AA</div>
+            <div class="filter-select">All <span class="filter-count">(#)</span></div>
+        </div>
+        <div class="regfiltr">
+            <div class="filter-name">Filter BB</div>
+            <div class="filter-select">All <span class="filter-count">(#)</span></div>
+        </div>
+        <div class="srchfiltr">
+            <div class="filter-input">Search</div>
+        </div>
+    </div>
     <div id="mapid"></div>
 </div>
