--- a/herams/js/overview/directives/dataviz/dataviz-table.html
+++ b/herams/js/overview/directives/dataviz/dataviz-table.html
@@ -1,31 +1,32 @@
-<div>
-    <table class="table">
+<div class="dataviz-table">
+    <div class="title">Title</div>
+    <table class="table table-sm">
       <thead>
         <tr>
-          <th scope="col">#</th>
-          <th scope="col">First</th>
-          <th scope="col">Last</th>
-          <th scope="col">Handle</th>
+          <th scope="col">LGS Name</th>
+          <th scope="col">Overall Service Availability(%)</th>
+          <th scope="col">Main underlying cause Label</th>
+          <th scope="col">Main underlying cause %</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
+          <td>#</td>
+          <td>00</td>
+          <td>#</td>
+          <td>00</td>
         </tr>
         <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
+          <td>#</td>
+          <td>00</td>
+          <td>#</td>
+          <td>00</td>
         </tr>
         <tr>
-          <th scope="row">3</th>
-          <td>Larry</td>
-          <td>the Bird</td>
-          <td>@twitter</td>
+          <td>#</td>
+          <td>00</td>
+          <td>#</td>
+          <td>00</td>
         </tr>
       </tbody>
     </table>
