Home legend & misc adjustments

--- a/herams/index.html
+++ b/herams/index.html
@@ -27,10 +27,10 @@
 
             <div class="menu-entry">
                 <div class="collapse-left-content">
-                    <i class="fas fa-chevron-left"></i><i class="fas fa-chevron-left"></i>
+                    <img src="img/home/Menu_minimize.png"/>
                 </div>
                 <div class="expand-left-content">
-                    <i class="fas fa-bars"></i>
+                    <img src="img/home/Menu_maximize.png"/>
                 </div>
                 <div class="Logo">
                     <img src="img/HeRAMS.png"/>
@@ -43,6 +43,16 @@
 
             <div class="map-entry">
                <homemap mapdata="homedata" ng-cloak></homemap>
+            </div>
+
+            <div class="map-legend">
+                <div class="legend-part">
+                    <div><img src="img/home/Legend_1.png"/><span>Target</span></div>
+                    <div><img src="img/home/Legend_2.png"/><span>Baseline established</span></div>
+                    <div><img src="img/home/Legend_3.png"/><span>Regular monitoring</span></div>
+                </div>
+                <div class="legend-part">
+                    <div><img src="img/home/Legend_available.png"/>Available project</div>
             </div>
 
         </div>
