--- a/herams/js/home/directives/entry-popups.html
+++ b/herams/js/home/directives/entry-popups.html
@@ -37,14 +37,12 @@
             </div>
         </div>
 
-<!--
-        <div class="row charts-icons">
-            <div class="col-sm-4">{{::data.charts[0].percentage}}%</div>
-            <div class="col-sm-4">{{::data.charts[1].percentage}}%</div>
-            <div class="col-sm-4">{{::data.charts[2].percentage}}%</div>
+        <div class="charts-icons">
+            <div><img src="img/home/Functionnality.png"/></div>
+            <div><img src="img/home/Availability.png"/></div>
+            <div><img src="img/home/HF.png"/></div>
         </div>
 
--->
 <!--
         <div class="row charts-cnts">
             <div class="col-sm-4 indic1-cnt">{{::data.charts[0].total}}</div>
