Overview - Simple Bar chart setup + window resize responsiveness on map

--- a/herams/index.html
+++ b/herams/index.html
@@ -23,7 +23,7 @@
   <![endif]-->
 
       <div class="mainWrapper">
-        <div class="home content" ng-controller="HomeCtrl" ng-init="init()">
+        <div class="home popover-base" ng-controller="HomeCtrl" ng-init="init()">
 
             <!--  USER PROFILE -->
             <div class="user-profile">
