Overview - Table review + map markers implementation start

--- a/herams/js/overview/directives/dataviz/dataviz-table.html
+++ b/herams/js/overview/directives/dataviz/dataviz-table.html
@@ -1,5 +1,48 @@
 <div class="dataviz-table">
     <div class="title">Title</div>
+  <div class="HRStable">
+
+    <div class="HRStable-cell row-header col-wider">LGA Name</div>
+    <div class="HRStable-cell row-header col-reg border-left">Overall Service Availability(%)</div>
+    <div class="HRStable-cell row-header col-reg border-left">Main Underlying cause</div>
+    <div class="HRStable-cell row-header col-reg border-left">Main Underlying cause (%)</div>
+
+    <div class="HRStable-cell col-wider">#</div>
+    <div class="HRStable-cell col-reg border-left">00</div>
+    <div class="HRStable-cell col-reg border-left">#</div>
+    <div class="HRStable-cell col-reg border-left">00</div>
+
+    <div class="HRStable-cell col-wider">#</div>
+    <div class="HRStable-cell col-reg border-left">00</div>
+    <div class="HRStable-cell col-reg border-left">#</div>
+    <div class="HRStable-cell col-reg border-left">00</div>
+
+    <div class="HRStable-cell col-wider">#</div>
+    <div class="HRStable-cell col-reg border-left">00</div>
+    <div class="HRStable-cell col-reg border-left">#</div>
+    <div class="HRStable-cell col-reg border-left">00</div>
+
+    <div class="HRStable-cell col-wider">#</div>
+    <div class="HRStable-cell col-reg border-left">00</div>
+    <div class="HRStable-cell col-reg border-left">#</div>
+    <div class="HRStable-cell col-reg border-left">00</div>
+
+    <div class="HRStable-cell col-wider">#</div>
+    <div class="HRStable-cell col-reg border-left">00</div>
+    <div class="HRStable-cell col-reg border-left">#</div>
+    <div class="HRStable-cell col-reg border-left">00</div>
+
+    <div class="HRStable-cell row-last col-wider">#</div>
+    <div class="HRStable-cell row-last col-reg border-left">00</div>
+    <div class="HRStable-cell row-last col-reg border-left">#</div>
+    <div class="HRStable-cell row-last col-reg border-left">00</div>
+
+  </div>
+</div>
+
+<!--
+<div class="dataviz-table">
+    <div class="title">Title</div>
     <table class="table table-sm">
       <thead>
         <tr>
@@ -30,4 +73,4 @@
         </tr>
       </tbody>
     </table>
-</div>
+</div>-->
