Home - Opens up with reduced left hand side panel

--- a/herams/index.html
+++ b/herams/index.html
@@ -39,7 +39,7 @@
             </div>
 
             <!--  LEFT-HAND SIDE PANEL -->
-            <div class="menu-entry">
+            <div class="menu-entry reduced">
                 <div class="collapse-left-content">
                     <img src="img/home/Menu_minimize.png"/>
                 </div>
@@ -56,7 +56,7 @@
             </div>
 
             <!--  MAP -->
-             <div class="map-entry">
+             <div class="map-entry fullscreen">
                <homemap mapdata="homedata" ng-cloak></homemap>
             </div>
 
