Overview UI tweaks + Partners implementation

--- a/herams/index.html
+++ b/herams/index.html
@@ -33,7 +33,7 @@
                     <div class="org"><span>who</span></div>
                 </div>
                 <div>
-                    <i class="fas fa-user-circle"></i>
+                    <img src="img/Profile_black.png"/>
                     <i class="fas fa-angle-down" id="log"></i>
                 </div>
             </div>
