Overview - partners disappear onscroll + review for categories switching

--- a/herams/overview.html
+++ b/herams/overview.html
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                     </div>
-                    <layout14 mapdata="::heramdata" ng-cloak></layout14>
+                    <div class="main-content"><layout14 mapdata="::heramdata" ng-cloak></layout14></div>
                     <!--<layout13 mapdata="::heramdata" ng-cloak></layout13>-->
                </div>
             </div>
