--- a/herams/index.html
+++ b/herams/index.html
@@ -7,14 +7,20 @@
   <title>HeRams</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/normalize.css">
+
+    <!-- build:css styles/vendor.css -->
+    <!-- bower:css -->
+    <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
   <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="../bower_components/leaflet/dist/leaflet.css" />
+    <!-- endbower -->
+    <!-- endbuild -->
 
+    <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
-  <script src="../bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+    <!-- endbuild -->
 </head>
 <body ng-app="app-herams">
 
@@ -94,6 +100,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
 
+    <!-- build:js scripts/vendor.js -->
+    <!-- bower:js -->
+  <script src="../bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
   <script src="../bower_components/angular/angular.js"></script>
@@ -110,32 +119,39 @@
   <script src="../bower_components/highcharts/modules/exporting.js"></script>
 
   <script src="../node_modules/@esri/arcgis-to-geojson-utils/dist/arcgis-to-geojson.js"></script>
+    <!-- endbower -->
+    <!-- endbuild -->
 
 
-  <!-- global -->
+    <!-- build:js({.tmp,herams}) scripts/scripts.js -->
   <script src="js/globalscripts/herams_global.js"></script>
 
-  <!-- app -->
   <script src="config/config.js"></script>
   <script src="config/tmp_chart.js"></script>
 
-  <!-- app -->
-  <script src="js/app.js"></script>
+   <script src="js/app.js"></script>
 
-  <!-- home -->
-  <!-- controllers -->
-  <script src="js/home/directives/homemap.js"></script>
-  <script src="js/home/controllers/home.js"></script>
-  <script src="js/overview/directives/hfmap.js"></script>
-  <!-- directives -->
-  <script src="js/home/directives/entry-popups.js"></script>
-  <!-- services -->
+  <!-- inject:js -->
+  <script src="js/globalscripts/herams_global.js"></script>
   <script src="js/common/services/commonSvc.js"></script>
-  <script src="js/home/services/MainMapSvc.js"></script>
-  <script src="js/home/services/LayerPopupSvc.js"></script>
-  <script src="js/home/services/ChartConfigSvc.js"></script>
   <script src="js/common/services/esritogeojsonSvc.js"></script>
-
+  <script src="js/overview/controllers/MainCtrl.js"></script>
+  <script src="js/overview/directives/hfmap.js"></script>
+  <script src="js/overview/services/HFMapSvc.js"></script>
+  <script src="js/home/controllers/home.js"></script>
+  <script src="js/home/directives/entry-popups.js"></script>
+  <script src="js/home/directives/homemap.js"></script>
+  <script src="js/home/services/ChartConfigSvc.js"></script>
+  <script src="js/home/services/LayerPopupSvc.js"></script>
+  <script src="js/home/services/MainMapSvc.js"></script>
+  <script src="js/overview/directives/dataviz/dataviz-table.js"></script>
+  <script src="js/overview/directives/layouts/layout_1_3.js"></script>
+  <script src="js/overview/directives/layouts/layout_1_4.js"></script>
+  <script src="config/config.js"></script>
+  <script src="config/tmp_chart.js"></script>
+  <script src="config/tmp_chart_bckp.js"></script>
+  <!-- endinject -->
+  <!-- endbuild -->
 
 <!--
   <script src="components/version/version.js"></script>
