--- a/herams/index.html
+++ b/herams/index.html
@@ -8,11 +8,11 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/main.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
   <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="../bower_components/leaflet/dist/leaflet.css" />
     <!-- endbower -->
@@ -28,7 +28,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-      <div class="mainWrapper">
+  <div class="mainWrapper">
         <div class="home popover-base" ng-controller="HomeCtrl" ng-init="init()">
 
             <!--  USER PROFILE -->
@@ -79,7 +79,7 @@
         </div>
       </div>
 
-
+    </div>
     <div id="popover-content" class="hidden-popover">
         <div class="log-popover">
         <ul>
@@ -123,33 +123,21 @@
     <!-- endbuild -->
 
 
-    <!-- build:js({.tmp,herams}) scripts/scripts.js -->
-  <script src="js/globalscripts/herams_global.js"></script>
-
-  <script src="config/config.js"></script>
-  <script src="config/tmp_chart.js"></script>
-
+    <!-- build:js({.tmp,herams}) scripts/scripts_home.js -->
    <script src="js/app.js"></script>
 
   <!-- inject:js -->
+  <script src="config/config.js"></script>
+  <script src="config/tmp_chart.js"></script>
   <script src="js/globalscripts/herams_global.js"></script>
   <script src="js/common/services/commonSvc.js"></script>
   <script src="js/common/services/esritogeojsonSvc.js"></script>
-  <script src="js/overview/controllers/MainCtrl.js"></script>
-  <script src="js/overview/directives/hfmap.js"></script>
-  <script src="js/overview/services/HFMapSvc.js"></script>
+  <script src="js/common/services/LayerPopupSvc.js"></script>
   <script src="js/home/controllers/home.js"></script>
   <script src="js/home/directives/entry-popups.js"></script>
   <script src="js/home/directives/homemap.js"></script>
   <script src="js/home/services/ChartConfigSvc.js"></script>
-  <script src="js/home/services/LayerPopupSvc.js"></script>
   <script src="js/home/services/MainMapSvc.js"></script>
-  <script src="js/overview/directives/dataviz/dataviz-table.js"></script>
-  <script src="js/overview/directives/layouts/layout_1_3.js"></script>
-  <script src="js/overview/directives/layouts/layout_1_4.js"></script>
-  <script src="config/config.js"></script>
-  <script src="config/tmp_chart.js"></script>
-  <script src="config/tmp_chart_bckp.js"></script>
   <!-- endinject -->
   <!-- endbuild -->
 
