--- a/herams/overview.html
+++ b/herams/overview.html
@@ -3,21 +3,24 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HeRams</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/normalize.css">
-  <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/main.css">
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+    <!-- build:css styles/vendor.css -->
+    <!-- bower:css -->
+    <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/normalize.css">
+  <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="../bower_components/leaflet/dist/leaflet.css" />
+    <!-- endbower -->
+    <!-- endbuild -->
 
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css" integrity="sha384-v2Tw72dyUXeU3y4aM2Y0tBJQkGfplr39mxZqlTBDUZAb9BGoC40+rdFCG0m10lXk" crossorigin="anonymous">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/fontawesome.css" integrity="sha384-q3jl8XQu1OpdLgGFvNRnPdj5VIlCvgsDQTQB6owSOHWlAurxul7f+JpUOVdAiJ5P" crossorigin="anonymous">
-
+    <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
-  <script src="../bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+    <!-- endbuild -->
 </head>
 <body ng-app="app-herams">
 
@@ -25,7 +28,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-      <div class="mainWrapper">
+    <div class="mainWrapper">
         <div ng-controller="MainCtrl" class="overview" ng-init="init()">
 
            <div class="menu">
@@ -82,7 +85,9 @@
                             </div>
                         </div>
                     </div>
-                    <!--<div class="main-content"><layout14 mapdata="::heramdata" ng-cloak></layout14></div>-->
+                    <div class="main-content">
+                        <layout14 mapdata="dataforMap" ng-cloak></layout14>
+                    </div>
                </div>
             </div>
 
@@ -131,6 +136,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
 
+    <!-- build:js scripts/vendor.js -->
+    <!-- bower:js -->
+  <script src="../bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
   <script src="../bower_components/angular/angular.js"></script>
@@ -142,44 +150,34 @@
   <!--<script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>-->
 
   <script src="../bower_components/leaflet/dist/leaflet-src.js"></script>
-
   <script src="../bower_components/highcharts/highcharts.js"></script>
   <script src="../bower_components/highcharts/highcharts-more.js"></script>
   <script src="../bower_components/highcharts/modules/exporting.js"></script>
 
   <script src="../node_modules/@esri/arcgis-to-geojson-utils/dist/arcgis-to-geojson.js"></script>
+    <!-- endbower -->
+    <!-- endbuild -->
 
-  <!-- global -->
-  <script src="js/globalscripts/herams_global.js"></script>
 
-  <!-- app -->
+    <!-- build:js({.tmp,herams}) scripts/scripts_wkspace.js -->
+
+   <script src="js/app.js"></script>
+
+  <!-- inject:js -->
   <script src="config/config.js"></script>
   <script src="config/tmp_chart.js"></script>
-
-  <!-- app -->
-  <script src="js/app.js"></script>
-
-  <!-- home -->
-  <!-- controllers -->
-  <script src="js/home/directives/homemap.js"></script>
-  <script src="js/home/controllers/home.js"></script>
-  <script src="js/overview/directives/hfmap.js"></script>
-  <!-- data visualization -->
-  <script src="js/overview/directives/dataviz/dataviz-table.js"></script>
-  <!-- layout -->
-  <script src="js/overview/directives/layouts/layout_1_4.js"></script>
-  <script src="js/overview/directives/layouts/layout_1_3.js"></script>
-  <!-- MainCtrl -->
-  <script src="js/overview/controllers/MainCtrl.js"></script>
-  <!-- directives -->
-  <script src="js/home/directives/entry-popups.js"></script>
-  <!-- services -->
+  <script src="js/globalscripts/herams_global.js"></script>
   <script src="js/common/services/commonSvc.js"></script>
-  <script src="js/home/services/MainMapSvc.js"></script>
-  <script src="js/home/services/LayerPopupSvc.js"></script>
-  <script src="js/home/services/ChartConfigSvc.js"></script>
   <script src="js/common/services/esritogeojsonSvc.js"></script>
+  <script src="js/common/services/LayerPopupSvc.js"></script>
+  <script src="js/overview/directives/hfmap.js"></script>
+  <script src="js/overview/controllers/MainCtrl.js"></script>
   <script src="js/overview/services/HFMapSvc.js"></script>
+  <script src="js/overview/directives/dataviz/dataviz-table.js"></script>
+  <script src="js/overview/directives/layouts/layout_1_3.js"></script>
+  <script src="js/overview/directives/layouts/layout_1_4.js"></script>
+  <!-- endinject -->
+  <!-- endbuild -->
 
 <!--
   <script src="components/version/version.js"></script>
