--- a/herams/js/overview/directives/hf-map.html
+++ b/herams/js/overview/directives/hf-map.html
@@ -1,4 +1,4 @@
-<div class="map-container">
+<div class="map-container" ng-cloak>
 <!--
     <div class="map-filters">
         <div class="regfiltr">
