--- a/herams/overview.html
+++ b/herams/overview.html
@@ -122,8 +122,8 @@
     <div id="popover-content" class="hidden-popover">
         <div class="log-popover">
         <ul>
-            <li>Profile</li>
-            <li>Logout</li>
+            <li ng-click="commonSvc.showUsrProfile()">Profile</li>
+            <li ng-click="commonSvc.logout()">Logout</li>
         </ul>
         </div>
     </div>
@@ -169,7 +169,7 @@
   <!-- inject:js -->
   <script src="config/config.js"></script>
   <script src="config/tmp_chart.js"></script>
-  <script src="js/globalscripts/herams_global.js"></script>
+  <script src="js/common/directives/user_popover.js"></script>
   <script src="js/common/services/chartsSvc.js"></script>
   <script src="js/common/services/commonSvc.js"></script>
   <script src="js/common/services/esritogeojsonSvc.js"></script>
@@ -177,7 +177,6 @@
   <script src="js/overview/controllers/MainCtrl.js"></script>
   <script src="js/overview/directives/hfmap.js"></script>
   <script src="js/overview/services/HFMapSvc.js"></script>
-  <script src="js/overview/directives/dataviz/dataviz-table.js"></script>
   <!-- endinject -->
   <!-- endbuild -->
 
