Home popups legends CSS edits

--- a/herams/js/overview/directives/dataviz/dataviz-table.html
+++ b/herams/js/overview/directives/dataviz/dataviz-table.html
@@ -1,5 +1,5 @@
 <div class="dataviz-table">
-  <div class="title">{{catdata[2].name}}</div>
+  <div class="title">{{tableData[0].name}}</div>
   <div>
     <table>
 		<thead>
