--- a/herams/js/overview/directives/hf-map.html
+++ b/herams/js/overview/directives/hf-map.html
@@ -20,14 +20,7 @@
     <div id="mapid"></div>
         <div class="map-legend">
             <div class="legend-part" ng-cloak>
-<!--
-                <div ng-repeat="statusspec in  statuses"><i class="fas fa-circle" style="color:{{statusspec.color}}"></i><span>{{statusspec.label}}</span></div>
--->
-                <div><i class="fas fa-circle" style="color:#00e765"></i><span>A1</span></div>
-                <div><i class="fas fa-circle" style="color:#efd759"></i><span>A2</span></div>
-                <div><i class="fas fa-circle" style="color:#f7931e"></i><span>A3</span></div>
-                <div><i class="fas fa-circle" style="color:#f71752"></i><span>A4</span></div>
-                <div><i class="fas fa-circle" style="color:#337ab7"></i><span>A5</span></div>
+                <div ng-repeat="legendItem in  legend track by $index"><i class="fas fa-circle" style="color:{{legendItem.color}}"></i><span>{{legendItem.label}}</span></div>
             </div>
         </div>
 </div>
