--- a/herams/overview.html
+++ b/herams/overview.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HeRams</title>
+  <title>HeRAMS</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -165,8 +165,8 @@
   <script src="js/common/services/esritogeojsonSvc.js"></script>
   <script src="js/common/services/LayerPopupSvc.js"></script>
   <script src="js/overview/controllers/MainCtrl.js"></script>
-  <script src="js/overview/directives/hfmap.js"></script>
   <script src="js/overview/services/HFMapSvc.js"></script>
+  <script src="js/overview/directives/hfmap.js"></script>
   <!-- endinject -->
   <!-- endbuild -->
 
