bug login popover fix

--- a/herams/overview.html
+++ b/herams/overview.html
@@ -68,8 +68,7 @@
                                     <div>
                                         <!--<i class="fas fa-user-circle"></i>-->
                                         <img src="img/Profile_white.png"/>
-                                        <!--<i class="fas fa-angle-down" id="log"></i>-->
-                                        <button popover-placement="left-bottom" uib-popover="On the left-bottom" type="button" class="btn btn-default"><i class="fas fa-angle-down"></i></button>
+                                        <i class="fas fa-angle-down" id="log"></i>
                                     </div>
                                 </div>
                             </div>
