--- a/herams/js/common/directives/user_popover.html
+++ b/herams/js/common/directives/user_popover.html
@@ -2,7 +2,7 @@
     <div class="log-popover">
         <ul>
             <li ng-click="viewProfile()">Profile</li>
-            <li ng-click="logout()"><a>Logout</a></li>
+            <li><a href="/user/logout" data-method="post">Logout</a></li>
         </ul>
     </div>
 </div>
