--- a/herams/overview.html
+++ b/herams/overview.html
@@ -23,6 +23,10 @@
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+
+    <script>
+        var tokenConfig="83vhjevf2t71799401fvai-TEST";
+    </script>
 </head>
 <body ng-app="app-herams">
 
@@ -155,13 +159,14 @@
     <!-- endbuild -->
 
 
+  <script src="config/config_dev.js"></script>
+
     <!-- build:js({.tmp,herams}) scripts/scripts_wkspace.js -->
 
    <script src="js/app.js"></script>
 
   <!-- inject:js -->
   <script src="config/config.js"></script>
-  <script src="config/tmp_chart.js"></script>
   <script src="js/common/directives/user_popover.js"></script>
   <script src="js/common/services/chartsSvc.js"></script>
   <script src="js/common/services/commonSvc.js"></script>
