Implementation user infos

--- a/herams/overview.html
+++ b/herams/overview.html
@@ -67,8 +67,8 @@
                             <div class="col-sm-6 col-lg-4">
                                 <div class="user-profile">
                                     <div>
-                                        <div class="usrname">Samuel Petragallo</div>
-                                        <div class="email">petragallo@who.int</div>
+                                        <div class="usrname" ng-cloak>{{ usr_name }}</div>
+                                        <div class="email" ng-cloak>{{ usr_email }}</div>
                                         <div class="org"><span>who</span></div>
                                     </div>
                                     <div>
