--- a/herams/index.html
+++ b/herams/index.html
@@ -40,8 +40,8 @@
             <!--  USER PROFILE -->
             <div class="user-profile">
                 <div>
-                    <div class="usrname">Samuel Petragallo</div>
-                    <div class="email">petragallo@who.int</div>
+                    <div class="usrname" ng-cloak>{{ usr_name }}</div>
+                    <div class="email" ng-cloak>{{ usr_email }}</div>
                     <div class="org"><span>who</span></div>
                 </div>
                 <div>
