--- a/herams/overview.html
+++ b/herams/overview.html
@@ -85,9 +85,13 @@
 
                         <div class="row">
                             <div class="col-12 filters">
-                                <div class="filter-location"><dropdown icon="img/filter_where.svg" val="val xxx"/></div>
+                                <div class="filter-location"><dropdown icon="img/filter_where.svg" value="Nigeria" items="filters[0].values"/></div>
                                 <div class="filter-calendar"><datepicker date="date"></datepicker></div>
-                                <div class="freesearch"><dropdown icon="img/filter_who.svg" val="val yyy"/></div>
+                                <div><dropdown icon="img/filter_who.svg" value="nc" items="filters[2].values"/></div>
+                                <div><dropdown icon="img/filter_who.svg" value="nc" items="filters[3].values"/></div>
+                                <div><dropdown icon="img/filter_who.svg" value="nc" items="filters[4].values"/></div>
+                                <div><dropdown icon="img/filter_who.svg" value="nc" items="filters[5].values"/></div>
+                                <div><button type="button" class="btn btn-primary">apply</button></div>
                             </div>
                         </div>
                     </div>
