--- a/herams/overview.html
+++ b/herams/overview.html
@@ -49,9 +49,13 @@
                 </div>
                 <div class="menu-items">
                     <ul ng-cloak>
-                        <li ng-repeat="category in categories" ng-class="{'selected': category.id==catIDSelect }">
-                            <a ng-click="launchLayout(category)" ng-if="category.id!=catIDSelect">{{category.name}}</a>
-                            <span ng-if="category.id==catIDSelect">{{category.name}}</span>
+                        <li ng-repeat="category in categories" ng-class="{'selected': category.id==catIDSelect[0] }">
+                            <div class="item">
+                                <span ng-if="category.id!=catIDSelect[0]"><a ng-click="launchLayout(category)">{{category.name}}</a></span>
+                                <span ng-if="category.id==catIDSelect[0]">{{category.name}}</span>
+                                <img src="img/menu_open.svg"/>
+                            </div>
+                            <div class="subcategories" ng-if="category.subcategories!=null">TEST</div>
                         </li>
                     </ul>
                 </div>
@@ -65,7 +69,7 @@
                         <div class="row">
                             <div class="col-sm-6 col-lg-8">
                                 <!--<div class="breadcrumbs">&nbsp;<a href="/"><i class="fas fa-chevron-left"></i> Back</a></div>-->
-                                <div class="title" ng-cloak><span>{{ catNameSelect }}</span></div>
+                                <div class="title" ng-cloak><span>{{ catNameSelect[0] }}</span></div>
                             </div>
                             <div class="col-sm-6 col-lg-4">
                                 <div class="user-profile">
